Added Resources to the bottom of the page that redirects you to the information for the underlined topics

--- a/index.html
+++ b/index.html
@@ -92,6 +92,16 @@
         </div>
 
         <header id="closing-banner"></header>
+
+        <footer>
+            <a href="https://en.wikipedia.org/wiki/Monkey_King" class="design-name">Sun Wukong</a>
+            <a href="https://en.wikipedia.org/wiki/Journey_to_the_West" class="design-name">Journey to the West</a>
+            <a href="https://en.wikipedia.org/wiki/Mount_Huaguo" class="design-name">Mountain of Flowers and Fruits</a>
+            <a href="https://en.wikipedia.org/wiki/Havoc_in_Heaven" class="design-name">Havoc in Heaven</a>
+            <a href="https://en.wikipedia.org/wiki/Tang_Sanzang" class="design-name">Tang Sanzang</a>
+            <a href="https://en.wikipedia.org/wiki/Zhu_Bajie" class="design-name">Zhu Bajie</a>
+            <a href="https://en.wikipedia.org/wiki/Sha_Wujing" class="design-name">Sha Wujing</a>
+        </footer>
     </div>
 
 
